@@ -718,3 +718,6 @@
 2014-12-11 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored 'Missing Affidavit Contacts' report to show Station
 	Call and Phone Number.
+2014-12-11 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'Program by Market' report in
+	'davit/programbymarket_report.cpp'.
